[project]
name = "agentsmith"
version = "0.1.0"
description = "An open-source alternative to LangChain for building LLM applications"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Khalil Snoussi", email = "snoussikhalil888@gmail.com" }
]
license = { text = "MIT" }
keywords = ["llm", "ai", "agents", "langchain-alternative", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "typing-extensions>=4.8.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "numpy>=1.24.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ipython>=8.0.0",
]

ollama = [
    "ollama>=0.1.1"
]

openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.8.0",
]
vectorstores = [
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "weaviate-client>=3.25.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
]
all = [
    "agentsmith[dev,openai,anthropic,vectorstores,embeddings]",
]

[project.urls]
Homepage = "https://github.com/khalilsnoussi/AgentSmith"
Documentation = "https://agentsmith.readthedocs.io"
Repository = "https://github.com/khalilsnoussi/AgentSmith"
Issues = "https://github.com/khalilsnoussi/AgentSmith/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ipython>=8.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "ARG", "SIM", "RUF"]
ignore = ["E501", "B008"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=agentsmith --cov-report=html --cov-report=term"
asyncio_mode = "auto"